<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".OptionsMenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="379dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_your_character"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pinkCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/pink2" />

            <ImageView
                android:id="@+id/greenCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/green2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/purpleCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/purple2" />

            <ImageView
                android:id="@+id/blueCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/blue2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="213dp"
        android:layout_height="246dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/easy_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:text="@string/easy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <Button
            android:id="@+id/medium_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:text="@string/medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <Button
            android:id="@+id/hard_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:text="@string/hard"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>