<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".OptionsMenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="379dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_your_characters"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/resetButtonP2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/stat_notify_sync" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pinkCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/pink2" />

            <ImageView
                android:id="@+id/greenCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/green2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/purpleCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/purple2" />

            <ImageView
                android:id="@+id/blueCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="imageSelected"
                app:srcCompat="@drawable/blue2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#7E4EC8C8"
                android:gravity="center_horizontal"
                android:text="@string/p1"
                android:textColor="#EFE4E4"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#7E4EC8C8"
                android:gravity="center_horizontal"
                android:text="@string/p2"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playerOnePic"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="#7E9BE4E4" />

            <ImageView
                android:id="@+id/playerTwoPic"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="#7E9BE4E4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corners_button"
                android:text="Continue"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>